--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">I Am Poor</string>
     <string name="title">I Am Poor</string>
-    <string name="i_am_poor">I Am Poor</string>
+
+    <string name="todo">TODO</string>
+    <string name="i_am_poor">I am poor</string>
+
 </resources>
